tests/NormalTests/paczka1/fuzzy1/64366107.err
Error in line 2: JNw A722 33,1
Error in line 15: JNw A884 13,2
Error in line 22: JNw A65 94,9
Error in line 21: p7MDRadEIG6 A65 81,8
Error in line 14: G58N0IHs9y A884 41,0
Error in line 27: p7MDRadEIG6 A1 -2,7
Error in line 24: p7MDRadEIG6 A1 31,9
Error in line 29: JNw A65 24,4
Error in line 36: G58N0IHs9y A884 91,62
Error in line 35: JNw A1 48,2
